# med-imagetools

./: .gitignore  old_pyproject.toml  pyproject.toml
config/: activation.sh  coverage.toml  hatch.toml  ruff.toml
rust/: Cargo.toml
rust/src/: getrefct.rs  lib.rs  main.rs
rust/src/modality/: mod.rs
src/imgtools/: __init__.py
src/imgtools/cli/: main.py
src/imgtools/modules/: structureset.py
src/imgtools/utils/: args.py
src/mitk/: __init__.py  logging_config.py  main.py
src/mitk/cli/: helpers.py  main.py
src/mitk/io/: __init__.py  __main__.py  locators.py
src/mitk/io/loaders/: __init__.py  base.py  load_sitk.py  structureset.py
src/mitk/utils/: bbox.py
tests/utils/: test_bbox.py
