[project]
name = "med-imagetools"
authors = [
  { name = "Sejin Kim", email = "sejin.kim@uhnresearch.ca" },
  { name = "Benjamin Haibe-Kains", email = "benjamin.haibe.kains@utoronto.ca" },
  { name = "Jermiah", email = "jermiahjoseph98@gmail.com" },
]
description = "Med-Imagetools: Transparent and Reproducible Medical Image Processing Pipelines in Python"
version = "2.0.0"
requires-python = ">= 3.10"
dependencies = [
  "numpy>=1.26.4,<2",
  "pydicom==2.4.4",
  "matplotlib>=3.9.2,<4",
  "pandas>=2.2.2,<3",
  "pynrrd>=1.0.0,<2",
  "pyyaml>=6.0.2,<7",
  "simpleitk>=2.4.0,<3",
  "h5py>=3.11.0,<4",
  "tqdm>=4.66.5,<5",
  "dill>=0.3.8,<0.4",
  "attrs>=24.2.0,<25",
  "scikit-image>=0.24.0,<0.25",
  "joblib>=1.4.2,<2",
  "scikit-learn>=1.5.2,<2",
  "rich>=13.8.1,<14",
  "rich-click>=1.8.3,<2",
  "textual>=0.79.1,<0.80",
  "click-didyoumean>=0.3.1,<0.4",
  "loguru>=0.7.2,<0.8",
  "scikit-rt>=0.3.19,<0.4",
]

[project.scripts]
mitk = "mitk.cli.main:cli"
build_rtstruct = "mitk.io.loaders.structureset:main"
modality = "mitk.main:main"
modality2 = "mitk.mitk:modality_cli"

#--------------------------------------------------------------------------------------------------#
############################################# MATURIN ##############################################
#__________________________________________________________________________________________________#

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manifest-path = "rust/Cargo.toml"
python-source = "src"
features = ["pyo3/extension-module"]
compatibility = "linux"

# [tool.maturin.features]
# extension-module = ["pyo3/extension-module"]
# dfault = ["extension-module"]

#--------------------------------------------------------------------------------------------------#
############################################## PIXI ################################################
#__________________________________________________________________________________________________#
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.system-requirements]
linux = '5.4.203'

[tool.pixi.target.linux-64.dependencies]
clang = ">=18.1.8,<19.0"
compilers = ">=1.6.0"
mold = ">=2.33.0,<3.0"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "tests"], solve-group = "default" }

[tool.pixi.feature.tests.dependencies]
pytest = "*"

[tool.pixi.feature.dev.activation]
scripts = ["config/activation.sh"]


[tool.pixi.feature.dev.dependencies]
pip = "~=23.2.1"
mypy = "*"
ipython = ">=8.27.0,<9"
maturin = ">=1.7.0,<1.8"


[tool.pixi.feature.dev.tasks]
cargo-build.cmd = "cargo build --release"
cargo-build.description = "Build the Rust crate"
cargo-build.cwd = "rust"

build.cmd = "PIP_REQUIRE_VIRTUALENV=false maturin develop"
build.description = "Build the Python package"
# build.depends_on = ["cargo-build"]
