[package]
name = "mitk"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mitk"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }

dicom = "0.7.0"
pyo3 = "0.22.0"
rust_search = "2.1.0"

[[bin]]
name = "getmodality"
path = "src/main.rs"

[[bin]]
name = "getrefct"
path = "src/getrefct.rs"